k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: default
  labels:
    app: frontend-service
spec:
  type: ClusterIP
  selector:
    app: frontend-service
  ports:
    - port: 80
      targetPort: 8080
